Move config
Create dberrors

Fix duplicate swagger warnings
